--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="assignmentForm">
   <p-dialog
-    header="Chi tiết công việc"
+    [header]="action === 'update' ? 'Cập nhật công việc' : 'Tạo mới công việc'"
     [(visible)]="assignmentVisible"
     [style]="{ width: '1400px' }"
     [draggable]="false"
