--- a/src/app/features/post-login/school/school-update/school-update.component.scss
+++ b/src/app/features/post-login/school/school-update/school-update.component.scss
@@ -1,4 +1,5 @@
-.icon{
+@import "../../../../../assets/scss/base.scss";
+.icon {
   font-size: 24px;
 }
 .overlay {
@@ -20,6 +21,21 @@
   align-items: center;
 }
 
-.font-weight-bold{
+.font-weight-bold {
   font-weight: bold;
+}
+.p-inputtext {
+  font-size: 16px;
+  width: 100%;
+  border-radius: 8px;
+}
+.p-button {
+  background-color: $primary;
+  border-radius: 8px;
+  border: solid 1px $primary;
+  transition: all 0.5s ease;
+  &:hover {
+    background-color: $primary-hover;
+    border-color: $primary-hover;
+  }
 }
