fix css dashboard

--- a/src/app/features/post-login/dashboard/dashboard.component.scss
+++ b/src/app/features/post-login/dashboard/dashboard.component.scss
@@ -119,11 +119,16 @@
     height: 240px;
 }
 .height-row-director {
-  height: 300px;
+    height: 300px;
 }
 .height-row-director .col-md-4,
 .height-row-principal .col-md-4,
 .height-row-principal .col-md-5,
 .height-row-principal .col-md-3 {
     height: inherit; /* or specify a specific height value */
+}
+.no-img {
+    img {
+        width: 200px;
+    }
 }
