--- a/src/app/features/post-login/school/school-update/school-update.component.html
+++ b/src/app/features/post-login/school/school-update/school-update.component.html
@@ -43,9 +43,7 @@
         </p-dropdown>
       </div>
       <div class="d-flex justify-content-center align-items-center">
-        <button pButton type="submit" (click)="confirm()">
-          Cập nhật
-        </button>
+        <button pButton type="submit" (click)="confirm()">Cập nhật</button>
       </div>
 
       <!--        <button class="m-3 btn btn-primary" (click)="onBack()" >Quay lại</button>-->
@@ -55,12 +53,11 @@
         <div class="d-flex justify-content-start">
           <label class="fw-medium p-content-fs">Thông tin hiệu trưởng</label>
 
-          <i
-            (click)="showDialog()"
+          <!-- <i
             [ngClass]="
               isUpdatePrincipalEmail ? 'icon bi bi-x' : 'icon bi bi-pencil-fill'
             "
-          ></i>
+          ></i> -->
         </div>
       </div>
 
@@ -81,65 +78,71 @@
               text="{{ this.avatar }}"
               [rounded]="true"
               [autoColor]="true"
-              [size]="'xxl'"
+              [size]="'xl'"
             ></tui-avatar>
           </div>
-          <div class="mb-4">
-            <div class="m-3">
-              <p class="text-black-50">Email</p>
+          <div class="my-4">
+            <div class="row mb-3">
+              <div class="col-md-3"></div>
+              <div class="col-md-3">
+                <label class="fw-medium p-content-fs">Tên</label>
+              </div>
+              <div class="col-md-6">
+                <span class="p-content-fs">{{ principal.user?.fullName }}</span>
+              </div>
             </div>
-            <div class="m-3">
-              <p class="font-weight-bold">{{ principal.email }}</p>
+            <div class="row mb-3">
+              <div class="col-md-3"></div>
+              <div class="col-md-3">
+                <label class="fw-medium p-content-fs">Email</label>
+              </div>
+              <div class="col-md-6">
+                <span class="p-content-fs">{{ principal.email }}</span>
+              </div>
             </div>
-          </div>
-          <div class="mb-4">
-            <div class="m-3">
-              <p class="text-black-50">Tên</p>
+            <div class="row mb-3">
+              <div class="col-md-3"></div>
+              <div class="col-md-3">
+                <label class="fw-medium p-content-fs">Giới tính</label>
+              </div>
+              <div class="col-md-6">
+                <span class="p-content-fs">{{
+                  principal.user?.gender == "MALE" ? "Nam" : "Nữ"
+                }}</span>
+              </div>
             </div>
-            <div class="m-3">
-              <p class="font-weight-bold">{{ principal.user?.fullName }}</p>
-            </div>
-          </div>
-          <div class="mb-4">
-            <div class="m-3">
-              <p class="text-black-50">Giới tính</p>
-            </div>
-            <div class="m-3">
-              <p class="font-weight-bold">
-                {{ principal.user?.gender == "MALE" ? "Nam" : "Nữ" }}
-              </p>
-            </div>
-          </div>
-          <div class="mb-4">
-            <div class="m-3">
-              <p class="text-black-50">Ngày sinh</p>
-            </div>
-            <div class="m-3">
-              <p class="font-weight-bold">
-                {{
+            <div class="row mb-3">
+              <div class="col-md-3"></div>
+              <div class="col-md-3">
+                <label class="fw-medium p-content-fs">Ngày sinh</label>
+              </div>
+              <div class="col-md-6">
+                <span class="p-content-fs">{{
                   principal.user?.dob == null
                     ? "Chưa nhập ngày sinh"
                     : principal.user?.dob
-                }}
-              </p>
+                }}</span>
+              </div>
             </div>
-          </div>
-          <div class="mb-4">
-            <div class="m-3">
-              <p class="text-black-50">Số điện thoại</p>
-            </div>
-            <div class="m-3">
-              <p class="font-weight-bold">
-                {{
-                  principal.user?.phoneNumber == null
-                    ? "Chưa nhập số điện thoại"
-                    : principal.user?.phoneNumber
-                }}
-              </p>
+            <div class="row mb-3">
+              <div class="col-md-3"></div>
+              <div class="col-md-3">
+                <label class="fw-medium p-content-fs">Số điện thoại</label>
+              </div>
+              <div class="col-md-6">
+                <span class="p-content-fs">{{
+                  principal.user?.dob == null
+                    ? "Chưa nhập ngày sinh"
+                    : principal.user?.dob
+                }}</span>
+              </div>
             </div>
           </div>
         </ng-container>
       </ng-container>
+      <div class="d-flex justify-content-center align-items-center">
+        <button pButton (click)="showDialog()">Thay thế hiệu trưởng</button>
+      </div>
     </div>
 
     <p-dialog
