--- a/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
@@ -187,8 +187,12 @@
           </th>
           <th></th>
         </tr>
-        <span *ngIf="allGuidanceDocument == 0"
-          >Không tìm thấy bản ghi nào phù hợp</span
+        <tr  *ngIf="allGuidanceDocument == 0"
+          >
+          <td colspan="6">
+            Không tìm thấy bản ghi nào phù hợp
+          </td>
+        </tr
         >
       </thead>
       <tbody *ngIf="guidanceDocuments.length > 0">
