Fix empty list message

--- a/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
@@ -190,7 +190,7 @@
         <tr  *ngIf="allGuidanceDocument == 0"
           >
           <td colspan="6">
-            Không tìm thấy bản ghi nào phù hợp
+            <p class="w-100 text-center mt-4 fw-medium fs-4">Không tìm thấy văn bản phù hợp</p>
           </td>
         </tr
         >
