--- a/src/app/features/post-login/assignment/assignment-tree-list/assignment-tree-list.component.html
+++ b/src/app/features/post-login/assignment/assignment-tree-list/assignment-tree-list.component.html
@@ -164,9 +164,11 @@
         </th>
         <th></th>
       </tr>
-      <span *ngIf="totalElements == 0"
-      >Không tìm thấy bản ghi nào phù hợp</span
-      >
+      <tr>
+        <td colspan="5">
+          <p class="w-100 text-center mt-4 fw-medium fs-4" *ngIf="totalElements == 0">Không tìm thấy tài liệu phù hợp</p>
+        </td>
+      </tr>
       </thead>
       <tbody *ngIf="taskTrees && taskTrees.length > 0">
       <tr
