--- a/src/app/features/post-login/dashboard/dashboard.component.html
+++ b/src/app/features/post-login/dashboard/dashboard.component.html
@@ -57,7 +57,7 @@
             </div>
             <div class="col-md-7">
               <span class="color-gray"
-                >trên tổng số {{ totalSchool }} kế hoạch</span
+                >trên tổng số {{ numberOfIniPlanWait ? numberOfIniPlanWait : 0 }} kế hoạch</span
               >
             </div>
             <div class="col-md-5 d-flex justify-content-end">
