--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
@@ -338,23 +338,23 @@ ul {
     width: 10%;
 }
 .width-30 {
-    width: 30%;
+    width: 40%;
 }
 .width-20 {
-  width: 20%;
+    width: 20%;
 }
-.width-15{
-width: 15%;
+.width-15 {
+    width: 15%;
 }
-.width-10{
-  width:10%;
+.width-10 {
+    width: 10%;
 }
 .width-200 {
-    width: 240px;
-  //padding: auto 0px;
+    // width: 240px;
+    //padding: auto 0px;
 }
-.width-80{
-  width: 120px;
+.width-80 {
+    width: 120px;
 }
 a {
     text-decoration: none;
@@ -425,8 +425,11 @@ th {
     max-height: 350px;
     overflow-y: auto;
 }
-.status-item{
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
+.status-item {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
+.ass-late {
+    color: #b42318;
 }
