Add xls and doc logo

--- a/src/app/features/post-login/inspection/record/record-detail/record-detail.component.html
+++ b/src/app/features/post-login/inspection/record/record-detail/record-detail.component.html
@@ -6,7 +6,7 @@
 ></p-confirmDialog>
 <p-toast position="top-right" key="deleteComplete"></p-toast>
 <p-toast position="top-right" key="deleteInComplete"></p-toast>
-<p-dialog header="Mục kiểm tra"
+<p-dialog header="Chi tiết mveục kiểm tra"
           [(visible)]="detailRecordPopupVisible"
           [modal]="true"
           [style]="{ width: '45%' }"
