--- a/src/app/features/post-login/inspection/record/update-record/update-record.component.html
+++ b/src/app/features/post-login/inspection/record/update-record/update-record.component.html
@@ -6,7 +6,7 @@
   rejectLabel="Hủy bỏ"
   key="updateTask"
 ></p-confirmDialog>
-<p-dialog header="Danh sách đoàn kiểm tra"
+<p-dialog header="Cập nhật mục kiểm tra"
           [(visible)]="updateRecordPopupVisible"
           [modal]="true"
           [style]="{ width: '50%', height: '63vh'}"
