fix type input assignment

--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -100,6 +100,7 @@
             #fileInput
             style="display: none"
             (change)="handleFileInputChange(fileInput)"
+            accept=".doc, .pdf, .docx, .xlsx"
           />
           <input
             pInputText
