Add school initiation list table header

--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
@@ -134,8 +134,8 @@
       <thead>
       <tr>
         <th (click)="onSort('initiationPlanName')">
-          <div class="header-container">
-            <span class="icon-text">Tên kế hoạch</span>
+          <div class="header-container" [class.table-header-sort]="sortBy == 'initiationPlanName'">
+            <label class="icon-text me-1">Tên kế hoạch</label>
             <i
               class="bi bi-sort-up"
               *ngIf="
@@ -151,8 +151,8 @@
           </div>
         </th>
         <th (click)="onSort('issue.createdDate')">
-          <div class="header-container">
-            <span class="icon-text">Kế hoạch kiểm tra</span>
+          <div class="header-container" [class.table-header-sort]="sortBy == 'issue.createdDate'">
+            <label class="icon-text me-1">Kế hoạch kiểm tra</label>
             <i
               class="bi bi-sort-up"
               *ngIf="
@@ -169,8 +169,8 @@
         </th>
 
         <th (click)="onSort('school.schoolName')">
-          <div class="header-container">
-            <span class="icon-text">Trường</span>
+          <div class="header-container" [class.table-header-sort]="sortBy == 'school.schoolName'">
+            <label class="icon-text me-1">Trường</label>
             <i
               class="bi bi-sort-up"
               *ngIf="
@@ -186,8 +186,8 @@
           </div>
         </th>
         <th (click)="onSort('createdDate')">
-          <div class="header-container">
-            <span class="icon-text">Ngày tạo</span>
+          <div class="header-container" [class.table-header-sort]="sortBy == 'createdDate'">
+            <label class="icon-text me-1">Ngày tạo</label>
             <i
               class="bi bi-sort-up"
               *ngIf="sortBy === 'createdDate' && sortDirection === 'asc'"
@@ -199,8 +199,8 @@
           </div>
         </th>
         <th (click)="onSort('deadline')">
-          <div class="header-container">
-            <span class="icon-text">Hạn nộp</span>
+          <div class="header-container" [class.table-header-sort]="sortBy == 'deadline'">
+            <label class="icon-text me-1">Hạn nộp</label>
             <i
               class="bi bi-sort-up"
               *ngIf="sortBy === 'deadline' && sortDirection === 'asc'"
@@ -212,8 +212,8 @@
           </div>
         </th>
         <th (click)="onSort('status')">
-          <div class="header-container">
-            <span class="icon-text">Trạng thái</span>
+          <div class="header-container" [class.table-header-sort]="sortBy == 'status'">
+            <span class="icon-text me-1">Trạng thái</span>
             <i
               class="bi bi-sort-up"
               *ngIf="sortBy === 'status' && sortDirection === 'asc'"
@@ -224,7 +224,6 @@
             ></i>
           </div>
         </th>
-
         <th></th>
       </tr>
       <span *ngIf="totalElements == 0"
