--- a/src/app/features/post-login/user/user-list/user-list.component.html
+++ b/src/app/features/post-login/user/user-list/user-list.component.html
@@ -127,7 +127,7 @@
       <button pButton class="reset-button" (click)="reset()">Đặt lại</button>
     </div>
     <div
-      class="mt-3 d-flex flex-row justify-content-between align-items-center"
+      class="mt-2 d-flex flex-row justify-content-between align-items-center"
     >
       <div>
         <button (click)="showImportUser()" pButton>
@@ -144,8 +144,8 @@
       <thead>
         <tr>
           <th (click)="onSort('user.userId')">
-            <div class="header-container">
-              <span class="icon-text">Mã</span>
+            <div class="header-container" [class.table-header-sort]="sortBy == 'user.userId'">
+              <label class="icon-text me-1">Mã</label>
               <i
                 class="bi bi-sort-up"
                 *ngIf="sortBy === 'user.userId' && sortDirection === 'asc'"
@@ -157,8 +157,8 @@
             </div>
           </th>
           <th (click)="onSort('user.fullName')">
-            <div class="header-container">
-              <span class="icon-text">Tên</span>
+            <div class="header-container" [class.table-header-sort]="sortBy == 'user.fullName'">
+              <label class="icon-text me-1">Tên</label>
               <i
                 class="bi bi-sort-up"
                 *ngIf="sortBy === 'user.fullName' && sortDirection === 'asc'"
@@ -170,8 +170,8 @@
             </div>
           </th>
           <th (click)="onSort('user.account.email')">
-            <div class="header-container">
-              <span class="icon-text">Email</span>
+            <div class="header-container" [class.table-header-sort]="sortBy == 'user.account.email'">
+              <label class="icon-text me-1">Email</label>
               <i
                 class="bi bi-sort-up"
                 *ngIf="
@@ -187,8 +187,8 @@
             </div>
           </th>
           <th (click)="onSort('user.phoneNumber')">
-            <div class="header-container">
-              <span class="icon-text">Số điện thoại</span>
+            <div class="header-container" [class.table-header-sort]="sortBy == 'user.phoneNumber'">
+              <label class="icon-text me-1">Số điện thoại</label>
               <i
                 class="bi bi-sort-up"
                 *ngIf="sortBy === 'user.phoneNumber' && sortDirection === 'asc'"
@@ -202,8 +202,8 @@
             </div>
           </th>
           <th (click)="onSort('user.account.school')">
-            <div class="header-container">
-              <span class="icon-text">Đơn vị</span>
+            <div class="header-container" [class.table-header-sort]="sortBy == 'user.account.school'">
+              <label class="icon-text me-1">Đơn vị</label>
               <i
                 class="bi bi-sort-up"
                 *ngIf="
@@ -219,8 +219,8 @@
             </div>
           </th>
           <th (click)="onSort('user.account.accountRoles.role.roleName')">
-            <div class="header-container">
-              <span class="icon-text">Chức vụ</span>
+            <div class="header-container" [class.table-header-sort]="sortBy == 'user.account.accountRoles.role.roleName'">
+              <label class="icon-text me-1">Chức vụ</label>
               <i
                 class="bi bi-sort-up"
                 *ngIf="
@@ -238,8 +238,8 @@
             </div>
           </th>
           <th (click)="onSort('user.account.isActive')">
-            <div class="header-container">
-              <span class="icon-text">Trạng thái</span>
+            <div class="header-container" [class.table-header-sort]="sortBy == 'user.account.isActive'">
+              <label class="icon-text me-1">Trạng thái</label>
               <i
                 class="bi bi-sort-up"
                 *ngIf="
