fix css school initiation plan

--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
@@ -264,3 +264,8 @@ input {
         color: $primary;
     }
 }
+:host ::ng-deep {
+    .p-confirm-dialog-accept {
+        margin-left: 20px;
+    }
+}
