Add table tooltip

--- a/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
@@ -219,6 +219,8 @@
             <button
               class="action-button"
               type="button"
+              pTooltip="Chi tiết"
+              tooltipPosition="top"
               (click)="onDetail(doc.guidanceDocumentId)"
             >
               <i class="bi bi-info-circle-fill"></i>
