--- a/src/app/features/post-login/inspection/inspection-mytask/inspection-mytask.component.html
+++ b/src/app/features/post-login/inspection/inspection-mytask/inspection-mytask.component.html
@@ -147,6 +147,8 @@
               class="action-item d-flex justify-content-center align-items-center mx-2"
             >
               <button
+                pTooltip="Chi tiết"
+                tooltipPosition="top"
                 type="button"
                 (click)="initDetailRecordData(taskList.taskId)"
               >
