--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
@@ -278,6 +278,8 @@
           <button
             class="action-button"
             type="button"
+            pTooltip="Chi tiết"
+            tooltipPosition="top"
             (click)="onDetail(plan.initiationPlanId)"
           >
             <i class="bi bi-info-circle-fill"></i>
