--- a/src/app/features/post-login/assignment/assignment-tree-list/assignment-tree-list.component.html
+++ b/src/app/features/post-login/assignment/assignment-tree-list/assignment-tree-list.component.html
@@ -213,6 +213,8 @@
           <button
             class="action-button"
             type="button"
+            pTooltip="Chi tiết"
+            tooltipPosition="top"
             (click)="
                 onDetail(
                   task.school?.schoolId,
