--- a/src/app/features/post-login/issue/create-issue/create-issue.component.html
+++ b/src/app/features/post-login/issue/create-issue/create-issue.component.html
@@ -78,7 +78,7 @@
               *ngIf="issueForm.controls?.['issueDetail']?.errors?.['whitespace'] || issueForm.controls?.['issueDetail']?.errors?.['required']"
               class="p-error"
             >
-              Vui lòng điền tên kế hoạch kiểm tra
+              Vui lòng điền chi tiết kế hoạch kiểm tra
             </span>
             <span
               *ngIf="issueForm.controls?.['issueDetail']?.errors?.['maxlength']"
