--- a/src/app/features/post-login/user/user-list/user-list.component.html
+++ b/src/app/features/post-login/user/user-list/user-list.component.html
@@ -201,19 +201,19 @@
               ></i>
             </div>
           </th>
-          <th (click)="onSort('user.account.school')">
+          <th (click)="onSort('user.account.school.schoolName')">
             <div class="header-container">
               <span class="icon-text">Đơn vị</span>
               <i
                 class="bi bi-sort-up"
                 *ngIf="
-                  sortBy === 'user.account.school' && sortDirection === 'asc'
+                  sortBy === 'user.account.school.schoolName' && sortDirection === 'asc'
                 "
               ></i>
               <i
                 class="bi bi-sort-down"
                 *ngIf="
-                  sortBy === 'user.account.school' && sortDirection === 'desc'
+                  sortBy === 'user.account.school.schoolName' && sortDirection === 'desc'
                 "
               ></i>
             </div>
