--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -23,8 +23,8 @@
   ></app-file-loading>
   <p-confirmDialog
     [style]="{ width: '50vw' }"
-    acceptLabel="Đồng ý"
-    rejectLabel="Hủy"
+    acceptLabel="Xác nhận"
+    rejectLabel="Hủy bỏ"
     key="confirmSchoolInitiationplan"
   ></p-confirmDialog>
   <!-- file preview -->
