--- a/src/app/features/login/login-form/login-form.component.html
+++ b/src/app/features/login/login-form/login-form.component.html
@@ -3,7 +3,7 @@
 <form class="login-form" [formGroup]="signInForm" (ngSubmit)="login()">
   <div>
     <label for="exampleInputEmail1" class="form-label fw-bold fs-5 mb-1">Email</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" pInputText
            placeholder="Đăng nhập sử dụng email được cung cấp" formControlName="email">
   </div>
   <div>
@@ -11,8 +11,8 @@
       <label for="exampleInputPassword1" class="form-label fw-bold fs-5 mb-1">Mật khẩu</label>
       <a class="mb-1" routerLink="/forgot_password">Quên mật khẩu ?</a>
     </div>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Mật khẩu" formControlName="password">
+    <input pInputText type="password" class="form-control" id="exampleInputPassword1" placeholder="Mật khẩu" formControlName="password">
   </div>
-  <button type="submit" class="btn btn-primary w-100 text-white">Đăng nhập</button>
+  <button pButton [loading]="loading" type="submit" class="btn btn-primary w-100 text-white">Đăng nhập</button>
 </form>
 <p-toast  key="center" position="top-right"></p-toast>
