--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
@@ -86,8 +86,8 @@
   <p-toast></p-toast>
   <p-confirmDialog
     [style]="{ width: '50vw' }"
-    acceptLabel="Đồng ý"
-    rejectLabel="Hủy"
+    acceptLabel="Xác nhận"
+    rejectLabel="Hủy bỏ"
     key="confirm"
   ></p-confirmDialog>
   <h5 class="mat-headline-5 fw-medium">
